♻️ refactor: 컴파일 문제 코드 수정